--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.21.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
+    "react-hook-form": "^6.13.1",
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.2.0",
