--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "react": "16.11.0",
     "react-bootstrap": "^1.4.3",
     "react-cookies": "^0.1.1",
+    "react-delay-link": "^1.1.4",
     "react-dom": "16.11.0",
     "react-hook-form": "^6.13.1",
     "react-icons": "^4.1.0",
