created mySrvExchange dict in SrvExchange_Server.py containes 5 contract

--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "bootstrap": "^5.0.0-beta1",
+    "drizzle-react-components": "^1.4.0",
     "react": "16.11.0",
     "react-bootstrap": "^1.4.3",
     "react-cookies": "^0.1.1",
